Ajout bouton add formulaire dans list

--- a/src/app/stagiaires/detail/detail.component.html
+++ b/src/app/stagiaires/detail/detail.component.html
@@ -39,3 +39,10 @@
     </ng-container>
   </div>
 </body>
+<button
+              mat-mini-flat
+              class="material-icons style2"
+
+            >
+              <mat-icon>add</mat-icon>
+            </button>
