--- a/src/app/survey-manager/survey/list/list.component.html
+++ b/src/app/survey-manager/survey/list/list.component.html
@@ -16,6 +16,13 @@
       </tr>
     </thead>
 
+    <button
+              mat-mini-flat
+              class="material-icons style3"
+            >
+              <mat-icon>edit</mat-icon>
+            </button>
+
     <tbody>
       <ng-container *ngFor="let survey of surveys">
         <tr>
@@ -47,6 +54,7 @@
                   Supprimer
                 </button>
                 <button type="button" (click)="decline()">Annuler</button>
+
               </div>
             </ng-template>
           </td>
