--- a/src/app/survey-manager/survey/list/list.component.scss
+++ b/src/app/survey-manager/survey/list/list.component.scss
@@ -36,7 +36,21 @@
 
   &:hover {
     background-color: #2d3041;
-    color: white;
+  }
+}
+
+.material-icons.style3 {
+  cursor: pointer;
+  color: white;
+  background-color: #ffc107;
+  border-radius: 0.4em;
+  width: 50px;
+  height: 50px;
+  margin: 10px 325px 10px 5px;
+  float: right;
+
+  &:hover {
+    background-color: #2d3041;
   }
 }
 
