--- a/src/app/poes/component/poe-add-remove-stagiaire/poe-add-remove-stagiaire.component.scss
+++ b/src/app/poes/component/poe-add-remove-stagiaire/poe-add-remove-stagiaire.component.scss
@@ -33,24 +33,18 @@
   
   .type {
     display: inline-block;
-    width: 50px;
+    width: 60px;
     height: 50px;
     font-size: 18px;
     margin-bottom: 9.5px;
     border-radius: 15%;
-    line-height: 50px;
+    border: 3px solid;
+    border-color: #2d3041;
+    line-height: 45px;
     vertical-align: middle;
     text-align: center;
     font-weight: bolder;
-    color: white;
-  
-    &.poei {
-      background-color: #cf1b6d;
-    }
-  
-    &.poec {
-      background-color: #ec851d;
-    }
+    color: #2d3041;
   }
   
   .material-icons.style {
@@ -151,10 +145,10 @@
     border-right: 3px solid;
     border-top: 3px solid;
     border-bottom: 3px solid;
-    border-color: #f4f4f4;
+    border-color: #e2e2e2;
     border-top-right-radius: 0.4em;
     border-bottom-right-radius: 0.4em;
-    background-color: #f4f4f4;
+    background-color: #e2e2e2;
   }
 
   ::-webkit-scrollbar-thumb {
@@ -263,7 +257,7 @@
 
   tr:nth-child(odd) {
     color: #2d3041;
-    background-color: #f4f4f4;
+    background-color: #e2e2e2;
   }
 
   tr:nth-child(even) {
