remove panorama and click list for trainees

--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -17,23 +17,14 @@
         </ul>
       </div>
       <div class="menu-item">
-        <button class="menu-button">• &nbsp;&nbsp;Participants</button>
-        <ul class="menu-sub-list">
-          <div class="menu-item">
-            <button class="menu-button">Panorama</button>
-          </div>
-          <div class="menu-item">
-            <button class="menu-button" (click)="goToTraineesList()">
-              Liste
-            </button>
-          </div>
-        </ul>
+        <button class="menu-button" (click)="goToTraineesList()">
+          • &nbsp;&nbsp;Participants
+        </button>
       </div>
       <div class="menu-item">
-        <button class="menu-button"(click)="goToSurveyList()">• &nbsp;&nbsp;Formulaire</button>
-          <div class="menu-item">
-          </div>
-
+        <button class="menu-button" (click)="goToSurveyList()">
+          • &nbsp;&nbsp;Formulaire
+        </button>
       </div>
       <div class="menu-item">
         <button class="menu-button">• &nbsp;&nbsp;Ajouter</button>
