--- a/src/app/auth/sign-in/sign-in.component.html
+++ b/src/app/auth/sign-in/sign-in.component.html
@@ -1,1 +1,47 @@
-<p>sign-in works!</p>
+<body>
+    <div class="formblock">
+      <br />
+      <br />
+      <ng-container *ngIf="form">
+        <div id="headline">
+          <p>Identifiez-vous!</p>
+        </div>
+  
+        <form [formGroup]="form" (ngSubmit)="onSubmit()">
+          <!-- form fields go here -->
+          <br />
+          <br />
+          <br />
+  
+          <mat-form-field style="width: 960px">
+            <mat-label>Nom utilisateur</mat-label>
+            <input matInput type="text" formControlName="username" />
+            <mat-error *ngIf="form.controls['username'].errors">
+              nom d'utilisateur obligatoire
+            </mat-error>
+          </mat-form-field>
+  
+          <br />
+
+            
+          <mat-form-field style="width: 960px">
+            <mat-label>Mot de passe</mat-label>
+            <input matInput type="text" formControlName="password" />
+            <mat-error *ngIf="form.controls['password'].errors">
+              Je vois pas pourquoi je te dirais quelle est l'erreur..
+            </mat-error>
+          </mat-form-field>
+  
+          <br />
+          <br />     
+            <br />
+          
+        
+          <div style="text-align: right">
+            <button type="submit" [disabled]="form.invalid">Rentrer dans le darkweb</button>
+          </div>
+        </form>
+      </ng-container>
+    </div>
+  </body>
+  
