--- a/src/app/poes/component/poe-add-remove-stagiaire/poe-add-remove-stagiaire.component.html
+++ b/src/app/poes/component/poe-add-remove-stagiaire/poe-add-remove-stagiaire.component.html
@@ -9,10 +9,11 @@
   <br />
 
 
-  <ng-container *ngIf="stagiaires">
-    <ng-container *ngIf="poe">
+
   <div class="listblock">
 
+    <ng-container *ngIf="stagiaires">
+      <ng-container *ngIf="poe">
         <div style="font-size: 50px; position: fixed; top: 150px;">
           <p>
             <span class="type" [ngClass]="{
@@ -22,11 +23,10 @@
             {{ poe.title | uppercase }}
           </p>
         </div>
-
-
+      </ng-container>
+    </ng-container>
   </div>
-
-
+    
 
 
     <table>
@@ -68,11 +68,11 @@
 
               <td style="width: 110px; vertical-align: middle;">
                 <ng-container *ngIf="stagiaire.poe.id != poe.id">
-                  <button class="button" (click)="onAdd(stagiaire.id)">add</button>
+                  <button class="button" (click)="onAdd(stagiaire.id)">+</button>
                 </ng-container>
 
                 <ng-container *ngIf="!(stagiaire.poe.id != poe.id)">
-                  <button class="remove" (click)="onRemove(stagiaire.id)">remove</button>
+                  <button class="remove" (click)="onRemove(stagiaire.id)">-</button>
                 </ng-container>
               </td>
             </tr>
@@ -80,7 +80,3 @@
         </ng-container>
       </tbody>
     </table>
-
-
-  </ng-container>
-  </ng-container>
