--- a/src/app/poes/component/poe-add-remove-stagiaire/poe-add-remove-stagiaire.component.scss
+++ b/src/app/poes/component/poe-add-remove-stagiaire/poe-add-remove-stagiaire.component.scss
@@ -11,7 +11,7 @@
   
   .listblock {
     font-family: arial, sans-serif;
-    font-size: 20px;
+    font-size: 26px;
     height: auto;
     border-collapse: collapse;
     margin-left: 550px;
@@ -33,18 +33,19 @@
   
   .type {
     display: inline-block;
-    width: 60px;
+    width: 50px;
     height: 50px;
     font-size: 18px;
     margin-bottom: 9.5px;
     border-radius: 15%;
     border: 3px solid;
-    border-color: #2d3041;
     line-height: 45px;
     vertical-align: middle;
     text-align: center;
     font-weight: bolder;
-    color: #2d3041;
+    color: black;
+    border: 3px solid;
+    border-color: black;
   }
   
   .material-icons.style {
@@ -262,6 +263,38 @@
 
   tr:nth-child(even) {
     color: #2d3041;
+  }
+}
+
+.bubble1 {
+  cursor: pointer;
+  color: white;
+  background-color: #2d3041;
+  border-radius: 0.4em;
+  width: 50px;
+  height: 50px;
+  margin: 10px 5px 10px 5px;
+  float: right;
+
+  &:hover {
+    background-color: red;
+    color: white;
+  }
+}
+
+.bubble2{
+  cursor: pointer;
+  color: white;
+  background-color: #9698a0;
+  border-radius: 0.4em;
+  width: 50px;
+  height: 50px;
+  margin: 10px 5px 10px 5px;
+  float: right;
+
+  &:hover {
+    background-color: #2d3041;
+    color: white;
   }
 }
 
