--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -23,7 +23,7 @@
       </div>
       <div class="menu-item">
         <button class="menu-button" (click)="goToSurveyList()">
-          • &nbsp;&nbsp;Formulaire
+          • &nbsp;&nbsp;Questionnaires
         </button>
       </div>
       <div class="menu-item">
