--- a/src/app/survey-manager/survey/update/update.component.html
+++ b/src/app/survey-manager/survey/update/update.component.html
@@ -1,50 +1,33 @@
-
-
-<ng-container *ngIf="currentQuestions">
-    <ng-container *ngIf="survey">
-        <p> 
-        titre : {{survey.title}}
-    </p>
-    <p>
-        Liste des questions  :
-        <!-- afficher liste des questions détaillées-->
+<body>
+  <ng-container *ngIf="survey">
+    <p class="title">titre : {{ survey.title }}</p>
+    <p class="list">
+      Liste des questions :
+      <!-- afficher liste des questions détaillées-->
     </p>
 
- 
-        <ng-container *ngFor="let question of currentQuestions">
-            <p>{{question.title}}</p>
-
-                <ng-container *ngIf="question.questionType==QuestionType.YES_NO">
-                    <p>YES_NO  {{question.title}} </p>   
-
-                </ng-container>
-
-                <ng-container *ngIf="question.questionType==QuestionType.QCM">
-                    <p>QCM : {{question.title}}</p>  
-                </ng-container>
-                <ng-container *ngIf="question.questionType==QuestionType.FREE_RESPONSE">
-                    <p>FREE_RESPONSE :   {{question.title}} </p>  
-                </ng-container>
-                <!-- Afficher les choix:-->
-                <p>
-                    <ng-container *ngFor="let choice of question.choices">
-                        {{choice.name}}        
-                        </ng-container>         
-                </p>
+    <ng-container *ngFor="let question of currentQuestions">
+      <p>{{ question.title }}</p>
+      <div>
+        <ng-container *ngIf="question.questionType == QuestionType.YES_NO">
+          <p>YES_NO {{ question.title }}</p>
         </ng-container>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
+        <ng-container *ngIf="question.questionType == QuestionType.QCM">
+          <p>QCM : {{ question.title }}</p>
+        </ng-container>
+        <ng-container
+          *ngIf="question.questionType == QuestionType.FREE_RESPONSE"
+        >
+          <p>FREE_RESPONSE : {{ question.title }}</p>
+        </ng-container>
+      </div>
+      <!-- Afficher les choix:-->
+      <p>
+        <ng-container *ngFor="let choice of question.choices">
+          {{ choice.name }}
+        </ng-container>
+      </p>
     </ng-container>
-</ng-container>
+  </ng-container>
+</body>
