--- a/src/app/poes/component/detail/detail.component.scss
+++ b/src/app/poes/component/detail/detail.component.scss
@@ -49,10 +49,11 @@
 }
 
 .type {
+  font-family: consolas, sans-serif, monospace;
   display: inline-block;
   width: 50px;
   height: 50px;
-  font-size: 18px;
+  font-size: 20px;
   margin-bottom: 9.5px;
   border-radius: 15%;
   line-height: 50px;
