--- a/src/app/stagiaires/list/list.component.scss
+++ b/src/app/stagiaires/list/list.component.scss
@@ -140,8 +140,10 @@ table {
     color: #2d3041;
     display: block;
     overflow: auto;
-    height: 500px;
+    margin-top: 0px;
+    height: 50%;
     width: 960px;
+    position: fixed;
   }
 
   td {
