--- a/src/app/poes/component/poe-add-remove-stagiaire/poe-add-remove-stagiaire.component.scss
+++ b/src/app/poes/component/poe-add-remove-stagiaire/poe-add-remove-stagiaire.component.scss
@@ -32,20 +32,19 @@
 
   
   .type {
+    font-family: consolas, sans-serif, monospace;
     display: inline-block;
     width: 50px;
     height: 50px;
-    font-size: 18px;
+    font-size: 20px;
     margin-bottom: 9.5px;
     border-radius: 15%;
-    border: 3px solid;
-    line-height: 45px;
+    line-height: 50px;
     vertical-align: middle;
     text-align: center;
     font-weight: bolder;
-    color: black;
-    border: 3px solid;
-    border-color: black;
+    color: white;
+    background-color: #9698a0;
   }
   
   .material-icons.style {
