add components questions and layout

--- a/src/app/shared/formulaire-add-general/formulaire-add-general.component.html
+++ b/src/app/shared/formulaire-add-general/formulaire-add-general.component.html
@@ -195,7 +195,7 @@
           ></textarea>
           <mat-hint align="end">{{ textarea.value.length || 0 }}/850</mat-hint>
           <mat-error *ngIf="addForm.controls['title'].errors">
-            Une description est obigatoire.
+            Une description est obligatoire.
           </mat-error>
         </mat-form-field>
 
