--- a/src/app/survey-manager/survey/update/update.component.html
+++ b/src/app/survey-manager/survey/update/update.component.html
@@ -1,33 +1,39 @@
 <body>
   <ng-container *ngIf="survey">
-    <p class="title">titre : {{ survey.title }}</p>
-    <p class="list">
-      Liste des questions :
-      <!-- afficher liste des questions détaillées-->
-    </p>
+    <mat-card>
+      <mat-card-title>
+        <h2 class="title">{{ survey.title }}</h2>
+      </mat-card-title>
+      <mat-card-content>
+        <br />
+        <br />
 
-    <ng-container *ngFor="let question of currentQuestions">
-      <p>{{ question.title }}</p>
-      <div>
-        <ng-container *ngIf="question.questionType == QuestionType.YES_NO">
-          <p>YES_NO {{ question.title }}</p>
-        </ng-container>
+        <ng-container *ngFor="let question of currentQuestions">
+          <p class="questions">
+            {{ currentQuestions.indexOf(question) + 1 }}&nbsp;-&nbsp;{{
+              question.title
+            }}
+          </p>
 
-        <ng-container *ngIf="question.questionType == QuestionType.QCM">
-          <p>QCM : {{ question.title }}</p>
+          <div>
+            <ng-container *ngIf="question.questionType == QuestionType.YES_NO">
+              <app-boolean [choices]="question.choices"></app-boolean>
+            </ng-container>
+
+            <ng-container *ngIf="question.questionType == QuestionType.QCM">
+              <app-multiple-choices
+                [choices]="question.choices"
+              ></app-multiple-choices>
+            </ng-container>
+
+            <ng-container
+              *ngIf="question.questionType == QuestionType.FREE_RESPONSE"
+            >
+              <app-free-response></app-free-response>
+            </ng-container>
+          </div>
         </ng-container>
-        <ng-container
-          *ngIf="question.questionType == QuestionType.FREE_RESPONSE"
-        >
-          <p>FREE_RESPONSE : {{ question.title }}</p>
-        </ng-container>
-      </div>
-      <!-- Afficher les choix:-->
-      <p>
-        <ng-container *ngFor="let choice of question.choices">
-          {{ choice.name }}
-        </ng-container>
-      </p>
-    </ng-container>
+      </mat-card-content>
+    </mat-card>
   </ng-container>
 </body>
