--- a/src/app/poes/component/poe-add-remove-stagiaire/poe-add-remove-stagiaire.component.scss
+++ b/src/app/poes/component/poe-add-remove-stagiaire/poe-add-remove-stagiaire.component.scss
@@ -8,7 +8,7 @@
     left: 500px;
     top: 100px;
   }
-  
+
   .listblock {
     font-family: arial, sans-serif;
     font-size: 20px;
@@ -30,8 +30,8 @@
   }
 
 
-  
-  .type {
+
+  .type1 {
     display: inline-block;
     width: 60px;
     height: 50px;
@@ -39,14 +39,35 @@
     margin-bottom: 9.5px;
     border-radius: 15%;
     border: 3px solid;
-    border-color: #2d3041;
+    background: #ec851d;
+    border-color: #ffffff;
     line-height: 45px;
     vertical-align: middle;
     text-align: center;
     font-weight: bolder;
-    color: #2d3041;
+    color: #ffffff;
+
   }
-  
+
+
+  .type2 {
+    display: inline-block;
+    width: 60px;
+    height: 50px;
+    font-size: 18px;
+    margin-bottom: 9.5px;
+    border-radius: 15%;
+    border: 3px solid;
+    background: #cf1b6d;
+    border-color: #ffffff;
+    line-height: 45px;
+    vertical-align: middle;
+    text-align: center;
+    font-weight: bolder;
+    color: #ffffff;
+  }
+
+
   .material-icons.style {
     cursor: pointer;
     color: white;
@@ -56,13 +77,13 @@
     height: 50px;
     margin: 10px 5px 10px 5px;
     float: right;
-  
+
     &:hover {
       background-color: red;
       color: white;
     }
   }
-  
+
   .material-icons.style2 {
     cursor: pointer;
     color: white;
@@ -72,13 +93,13 @@
     height: 50px;
     margin: 10px 5px 10px 5px;
     float: right;
-  
+
     &:hover {
       background-color: #2d3041;
       color: white;
     }
   }
-  
+
   button {
     cursor: pointer;
     font-family: arial, sans-serif;
@@ -92,19 +113,19 @@
     width: 100px;
     height: 32px;
     margin: 10px 5px 10px 5px;
-  
+
     &.poei {
       background-color: #cf1b6d;
     }
-  
+
     &.poec {
       background-color: #ec851d;
     }
-  
+
     &.delete {
       background-color: red;
     }
-  
+
     &:hover {
       background-color: #2d3041;
     }
@@ -265,4 +286,3 @@
   }
 }
 
-  
