--- a/src/app/poes/component/list/list.component.html
+++ b/src/app/poes/component/list/list.component.html
@@ -103,6 +103,20 @@
               class="material-icons style2"
               (click)="goToUpdate(poe.id)"
             >
+
+
+              <table class="avectri">
+                <thead>
+                  <tr>
+                    <th>Entête 1</th>
+                    <th>Entête 2</th>
+                    <th class="selection" data-tri="1" data-type="num">Entête 3</th>
+                  </tr>
+                </thead>
+                <tbody>
+
+                </tbody>
+              </table>
               <mat-icon>edit</mat-icon>
             </button>
           </td>
@@ -115,3 +129,5 @@
     <br />
   </div>
 </body>
+
+
