--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -18,10 +18,10 @@
         <button class="menu-button">• &nbsp;&nbsp;Listes</button>
         <ul class="menu-sub-list">
           <div class="menu-item">
-            <button class="menu-button" (click)="goToTraineesList()">• &nbsp;&nbsp;Formations</button>
+            <button class="menu-button" (click)="goToPOESList()">• &nbsp;&nbsp;Formations</button>
           </div>
           <div class="menu-item">
-            <button class="menu-button" (click)="goToPOESList()">• &nbsp;&nbsp;Participants</button>
+            <button class="menu-button" (click)="goToTraineesList()">• &nbsp;&nbsp;Participants</button>
           </div>
         </ul>
       </div>
