--- a/src/app/poes/component/detail/detail.component.html
+++ b/src/app/poes/component/detail/detail.component.html
@@ -8,7 +8,7 @@
 
   <div class="nameblock">
     <ng-container *ngIf="poedetail">
-      <div style="font-size: 50px; position: fixed; top: 150px;">
+      <div style="font-size: 50px; position: fixed; top: 150px; white-space: nowrap;">
         <p>
           <span class="type" [ngClass]="{
               poei: poedetail.poeType === 'POEI',
