--- a/src/app/survey-manager/survey/update/update.component.scss
+++ b/src/app/survey-manager/survey/update/update.component.scss
@@ -2,9 +2,7 @@ body {
   height: auto;
   border-collapse: collapse;
   margin-left: 500px;
-  margin-right: auto;
   margin-top: 32px;
-  width: 45%;
   color: #2d3041;
 }
 .title {
@@ -15,19 +13,100 @@ body {
 
 mat-card {
   border-bottom: 1px solid #2d3041;
+  display: inline-block;
+  vertical-align: top;
+
+  &.survey-card {
+    width: 50%;
+    margin-bottom: 32px;
+  }
+
+  &.questions-list-card {
+    margin-left: 75px;
+  }
+
+  mat-card-title {
+    background-color: #9698a0;
+    margin: 0;
+    padding: 15px 15px;
+    border-radius: 5px;
+  }
+
+  .question-title {
+    font-size: large;
+  }
+
+  .choices {
+    font-size: large;
+  }
 }
 
-mat-card-title {
+button {
+  cursor: pointer;
+  font-family: arial, sans-serif;
+  font-size: 18px;
+  border: 3px solid;
+  border-color: #00000000;
   background-color: #9698a0;
-  margin: 0;
-  padding: 15px 15px;
-  border-radius: 5px;
+  color: white;
+  border-radius: 0.4em;
+  width: 120px;
+  height: 32px;
+  display: flex;
+  justify-content: center;
+
+  &:hover {
+    background-color: #2d3041;
+  }
 }
 
-.questions {
-  font-size: large;
+//////////////////////////////////////////////////////////////////////////////////////////////
+///
+///
+
+.questions-list {
+  border: solid 1px #ccc;
+  min-height: 60px;
+  background: white;
+  border-radius: 4px;
+  overflow: hidden;
 }
 
-.choices {
-  font-size: large;
+.question {
+  padding: 20px 10px;
+  border-bottom: solid 1px #ccc;
+  color: rgba(0, 0, 0, 0.87);
+
+  box-sizing: border-box;
+  cursor: move;
+  background: white;
+  font-size: 14px;
+}
+
+.cdk-drag-preview {
+  box-sizing: border-box;
+  border-radius: 4px;
+  box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
+    0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12);
+}
+
+.cdk-drag-placeholder {
+  opacity: 0;
+}
+
+.cdk-drag-animating {
+  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+}
+
+.question.cdk-drag-disabled {
+  background: #ccc;
+  cursor: default;
+}
+
+.question:last-child {
+  border: none;
+}
+
+.questions-list.cdk-drop-list-dragging .example-box:not(.cdk-drag-placeholder) {
+  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
