--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,13 +1,22 @@
+<head>
+<input type="search">
+<style>
+  #search{
+    border-radius: 30px;
+    border: 2px solid rgb(112, 46, 46);
+  }
+</head>
+
+</style>
 <div id="leftpanel">
   <div id="title">
     <p>> MENU</p>
-  </div>
 
   <div>
 
 
     <ul class="menu-list">
-      
+
       <div class="menu-item">
         <button class="menu-button" (click)="goToHome()">
           • &nbsp;&nbsp;Accueil
