--- a/src/app/poes/component/poepanorama/poepanorama.component.scss
+++ b/src/app/poes/component/poepanorama/poepanorama.component.scss
@@ -180,13 +180,13 @@ button {
 
   .formbutton {
     cursor: pointer;
-    font-family: consolas, sans-serif, monospace;
+    font-family: arial, sans-serif;
     float: left;
     width: 77px;
     height: 60px;
-    font-size: 20px;
+    font-size: 15px;
     border-radius: 0.4em;
-    line-height: 20px;
+    line-height: 15px;
     vertical-align: middle;
     text-align: center;
     font-weight: bolder;
