--- a/src/app/survey-manager/survey/list/list.component.html
+++ b/src/app/survey-manager/survey/list/list.component.html
@@ -1,5 +1,5 @@
 <body>
-  <div id="headline">Listes des questionnaires</div>
+  <div id="headline">Liste des questionnaires</div>
   <br />
 
   <br />
@@ -7,49 +7,37 @@
 
   <table>
     <thead>
-      <th style="width: 260px">
-        Intitulé
-
-        <button
-          mat-mini-flat
-          class="material-icons style3"
-          (click)="onSurveyCreate()"
-        >
-          <mat-icon>add</mat-icon>
+      <tr>
+        <th style="width: 740px">Intitulé</th>
+        <th style="width: 200px; text-align: left"><button (click)="onSurveyCreate()">
+          Ajouter
         </button>
-      </th>
+        </th>
+      </tr>
     </thead>
 
     <tbody>
       <ng-container *ngFor="let survey of surveys">
         <tr>
           <td style="width: 80px">
-            <mat-icon class="bubble">assignment</mat-icon>
+            <button mat-mini-flat class="material-icons style3" (click)="openModal(template)">
+              <mat-icon>assignment</mat-icon>
+            </button>
+
           </td>
-          <td style="width: 500px">
+          <td style="width: 710px">
             {{ survey.title }}
           </td>
-          <td style="width: 160px">
-            <button
-              nmat-mini-flat
-              class="material-icons style"
-              (click)="openModal(template)"
-            >
+          <td style="width: 150px">
+            <button mat-mini-flat class="material-icons style" (click)="openModal(template)">
               <mat-icon>delete</mat-icon>
             </button>
-            <button
-              mat-mini-flat
-              class="material-icons style2"
-              (click)="onSurveyUpdate(survey.id)"
-            >
+            <button mat-mini-flat class="material-icons style2" (click)="onSurveyUpdate(survey.id)">
               <mat-icon>edit</mat-icon>
             </button>
 
             <ng-template #template>
-              <div
-                class="modal-body text-center"
-                style="background-color: white; border-radius: 0.4em"
-              >
+              <div class="modal-body text-center" style="background-color: white; border-radius: 0.4em">
                 <p style="font-size: 22px">Confirmer la suppression ?</p>
                 <button type="button" class="delete" (click)="confirm(survey)">
                   Supprimer
