--- a/src/app/survey-manager/survey/update/update.component.html
+++ b/src/app/survey-manager/survey/update/update.component.html
@@ -2,7 +2,7 @@
   <ng-container *ngIf="survey">
     <mat-card class="survey-card">
       <mat-card-title>
-        <h2 class="title">{{ survey.title }}</h2>
+        <input class="title" value="Nouveau" />
       </mat-card-title>
       <mat-card-content>
         <br />
@@ -21,31 +21,7 @@
             *ngFor="let question of questionsSurvey"
             cdkDrag
           >
-            <p class="question-title">
-              {{ questionsSurvey.indexOf(question) + 1 }}&nbsp;-&nbsp;{{
-                question.title
-              }}
-            </p>
-
-            <div>
-              <ng-container
-                *ngIf="question.questionType == QuestionType.YES_NO"
-              >
-                <app-boolean [choices]="question.choices"></app-boolean>
-              </ng-container>
-
-              <ng-container *ngIf="question.questionType == QuestionType.QCM">
-                <app-multiple-choices
-                  [choices]="question.choices"
-                ></app-multiple-choices>
-              </ng-container>
-
-              <ng-container
-                *ngIf="question.questionType == QuestionType.FREE_RESPONSE"
-              >
-                <app-free-response></app-free-response>
-              </ng-container>
-            </div>
+            <app-edit-question [question]="question"></app-edit-question>
           </div>
         </div>
       </mat-card-content>
@@ -64,7 +40,6 @@
           cdkDragBoundary=".boundary"
           *ngFor="let question of questionsList"
           cdkDrag
-          [cdkDragDisabled]="dragDisabled(question)"
         >
           {{ question.title }}&nbsp;({{ question.questionType }})
         </div>
